--- a/app/feature/directives/table.html
+++ b/app/feature/directives/table.html
@@ -2,46 +2,46 @@
     <thead>
     <tr>
         <th>
-            <a href="#" ng-click="$ctrl.sortType = 'action'; $ctrl.sortReverse = !$ctrl.sortReverse">
+            <a href="#" ng-click="$todoCtrl.changeSorting('action')">
                 Description
-                <span ng-show="$ctrl.sortType == 'action' && $ctrl.sortReverse == false;" class="glyphicon glyphicon-chevron-up"></span>
-                <span ng-show="$ctrl.sortType == 'action' && $ctrl.sortReverse == true;" class="glyphicon glyphicon-chevron-down"></span>
+                <span ng-show="$todoCtrl.isSortedAscending('action')" class="glyphicon glyphicon-chevron-up"></span>
+                <span ng-show="$todoCtrl.isSortedDescending('action')" class="glyphicon glyphicon-chevron-down"></span>
             </a>
         </th>
-        <th>Checkbox</th>
+        <th><input type="checkbox" ng-model="$todoCtrl.allDone" ng-change="$todoCtrl.makeAllDone()"></th>
         <th>
-            <a href="#" ng-click="$ctrl.sortType = 'done'; $ctrl.sortReverse = !$ctrl.sortReverse">
+            <a href="#" ng-click="$todoCtrl.changeSorting('done')">
                 Done
-                <span ng-show="$ctrl.sortType == 'done' && $ctrl.sortReverse == false;" class="glyphicon glyphicon-chevron-up"></span>
-                <span ng-show="$ctrl.sortType == 'done' && $ctrl.sortReverse == true;" class="glyphicon glyphicon-chevron-down"></span>
+                <span ng-show="$todoCtrl.isSortedAscending('done')" class="glyphicon glyphicon-chevron-up"></span>
+                <span ng-show="$todoCtrl.isSortedDescending('done')" class="glyphicon glyphicon-chevron-down"></span>
             </a>
         </th>
         <th>
-            <a href="#" ng-click="$ctrl.sortType = 'deadline'; $ctrl.sortReverse = !$ctrl.sortReverse">
+            <a href="#" ng-click="$todoCtrl.changeSorting('deadline')">
                 Deadline
-                <span ng-show="$ctrl.sortType == 'deadline' && $ctrl.sortReverse == false;" class="glyphicon glyphicon-chevron-up"></span>
-                <span ng-show="$ctrl.sortType == 'deadline' && $ctrl.sortReverse == true;" class="glyphicon glyphicon-chevron-down"></span>
+                <span ng-show="$todoCtrl.isSortedAscending('deadline')" class="glyphicon glyphicon-chevron-up"></span>
+                <span ng-show="$todoCtrl.isSortedDescending('deadline')" class="glyphicon glyphicon-chevron-down"></span>
              </a>
         </th>
         <th>
-            <a href="#" ng-click="$ctrl.sortType = 'responsible'; $ctrl.sortReverse = !$ctrl.sortReverse">
+            <a href="#" ng-click="$todoCtrl.changeSorting('responsible')">
                 Responsible
-                <span ng-show="$ctrl.sortType == 'responsible' && $ctrl.sortReverse == false;" class="glyphicon glyphicon-chevron-up"></span>
-                <span ng-show="$ctrl.sortType == 'responsible' && $ctrl.sortReverse == true;" class="glyphicon glyphicon-chevron-down"></span>
+                <span ng-show="$todoCtrl.isSortedAscending('responsible')" class="glyphicon glyphicon-chevron-up"></span>
+                <span ng-show="$todoCtrl.isSortedDescending('responsible')" class="glyphicon glyphicon-chevron-down"></span>
             </a>
         </th>
         <th>
-            <a href="#" ng-click="$ctrl.sortType = 'hours'; $ctrl.sortReverse = !$ctrl.sortReverse">
+            <a href="#" ng-click="$todoCtrl.changeSorting('hours')">
                 Est. Hours
-                <span ng-show="$ctrl.sortType == 'hours' && $ctrl.sortReverse == false;" class="glyphicon glyphicon-chevron-up"></span>
-                <span ng-show="$ctrl.sortType == 'hours' && $ctrl.sortReverse == true;" class="glyphicon glyphicon-chevron-down"></span>
+                <span ng-show="$todoCtrl.isSortedAscending('hours')" class="glyphicon glyphicon-chevron-up"></span>
+                <span ng-show="$todoCtrl.isSortedDescending('hours')" class="glyphicon glyphicon-chevron-down"></span>
             </a>
         </th>
         <th class="text-right">Commands</th>
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="item in $ctrl.todo.items | checkedItems: $ctrl.showCompleted | orderBy : $ctrl.sortType : $ctrl.sortReverse" highlight-missed>
+    <tr ng-repeat="item in $todoCtrl.todo.items | checkedItems: $todoCtrl.showCompleted | orderBy : $todoCtrl.sortType : $todoCtrl.sortReverse" highlight-missed>
         <td>{{ item.action }}</td>
         <td><input type="checkbox" ng-model="item.done"></td>
         <td>{{ item.done ? 'Yes' : 'No' }}</td>.
@@ -54,14 +54,14 @@
                     class="btn btn-primary"
                     data-toggle="modal"
                     data-target="#myModal"
-                    ng-click="$ctrl.setCurrentItem(item)">
+                    ng-click="$todoCtrl.setCurrentItem(item)">
 									<span class="glyphicon glyphicon-edit" aria-hidden="true"
                                           title="Edit"></span>
             </button>
             <button
                     type="button"
                     class="btn btn-danger"
-                    ng-click="$ctrl.deleteItem($ctrl.todo.items, item)">
+                    ng-click="$todoCtrl.deleteItem($todoCtrl.todo.items, item)">
 									<span class="glyphicon glyphicon-trash" aria-hidden="true"
                                           title="Delete"></span>
             </button>
