--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-controller="Todo as $ctrl">
+<html ng-controller="Header as $headerCtrl">
 <head>
 	<meta charset="utf-8">
-	<title ng-bind-template="{{ ::$ctrl.todo.user }}'s TO DO List"></title>
+	<title ng-bind-template="{{ ::$headerCtrl.todo.user }}'s TO DO List"></title>
 	<link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -13,25 +13,25 @@
 <body ng-cloak>
 	<div class="container">
         <page-header></page-header>
-		<div class="panel">
+		<div class="panel"  ng-controller="Form as $formCtrl">
 			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
 				Add item
 			</button>
 			<item-modal></item-modal>
 		</div>
 
-		<div class="panel panel-primary">
+		<div class="panel panel-primary" ng-controller="Todo as $todoCtrl">
 			<div class="panel-heading">
 				<span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> To Do List
 			</div>
 			<div class="panel-body">
             <todo-list></todo-list>
                 <label>
-                    <input type="checkbox" ng-model="$ctrl.showCompleted">Show Completed</input>
+                    <input type="checkbox" ng-model="$todoCtrl.showCompleted">Show Completed</input>
                 </label>
 				<button class="btn btn-default btn-sm"
-						ng-show="$ctrl.isCompletedItemPresent($ctrl.todo.items)"
-						ng-click="$ctrl.removeCompletedItems()">Remove completed
+						ng-show="$todoCtrl.isCompletedItemPresent($todoCtrl.todo.items)"
+						ng-click="$todoCtrl.removeCompletedItems()">Remove completed
 				</button>
 			</div>
 		</div>
@@ -46,10 +46,12 @@
 	<script src="common/common.module.js"></script>
 	<script src="common/services/user.service.js"></script>
 	<script src="common/directives/page-header.directive.js"></script>
+	<script src="common/page-header.controller.js"></script>
 
 	<script src="feature/feature.module.js"></script>
 	<script src="feature/todo.service.js"></script>
 	<script src="feature/todo.controller.js"></script>
+	<script src="feature/item-form.controller.js"></script>
 	<script src="feature/directives/todo-list.directive.js"></script>
 	<script src="feature/checked-items.filter.js"></script>
 	<script src="feature/directives/highlight-missed.directive.js"></script>
