--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,11 @@
 			<div class="panel-heading">
 				<span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> To Do List
 			</div>
+
 			<div class="panel-body">
-            <todo-list></todo-list>
+				<span>Filter tasks </span><input type="text" ng-model="$todoCtrl.filterText">
+
+            	<todo-list></todo-list>
                 <label>
                     <input type="checkbox" ng-model="$todoCtrl.showCompleted">Show Completed</input>
                 </label>
@@ -33,6 +36,16 @@
 						ng-show="$todoCtrl.isCompletedItemPresent($todoCtrl.todo.items)"
 						ng-click="$todoCtrl.removeCompletedItems()">Remove completed
 				</button>
+
+				<div class="pull-right">
+					<span>Page size </span>
+					<select name="pageSize" ng-model="$todoCtrl.pageSize" ng-options="item.count as item.name for item in $todoCtrl.pageSizes">
+					</select>
+					<button class="btn btn-default btn-sm" ng-click="$todoCtrl.prevPage()">Prev page</button>
+					<ul class="list-inline paging" paging collection="$todoCtrl.todo.items" size="{{ $todoCtrl.pageSize }}">
+					</ul>
+					<button class="btn btn-default btn-sm" ng-click="$todoCtrl.nextPage()">Next page</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -56,6 +69,7 @@
 	<script src="feature/checked-items.filter.js"></script>
 	<script src="feature/directives/highlight-missed.directive.js"></script>
 	<script src="feature/directives/item-modal.directive.js"></script>
+	<script src="feature/directives/paging.directive.js"></script>
 
 	<script src="app.js"></script>
 </body>
