--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-controller="Header as $headerCtrl">
+<html>
 <head>
 	<meta charset="utf-8">
-	<title ng-bind-template="{{ ::$headerCtrl.todo.user }}'s TO DO List"></title>
+	<title ng-bind-template="TO DO List"></title>
 	<link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -12,40 +12,26 @@
 </head>
 <body ng-cloak>
 	<div class="container">
-        <page-header></page-header>
-		<div class="panel"  ng-controller="Form as $formCtrl">
-			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-				Add item
-			</button>
-			<item-modal></item-modal>
-		</div>
 
-		<div class="panel panel-primary" ng-controller="Todo as $todoCtrl">
+        <page-header></page-header>
+
+		<h4>Menu</h4>
+		<menu>
+			<menu-item>Task</menu-item>
+			<menu-item>Users</menu-item>
+			<menu-group menu-title="Settings">
+				<menu-item>General</menu-item>
+				<menu-item>Cost</menu-item>
+			</menu-group>
+		</menu>
+
+		<div class="panel panel-primary">
 			<div class="panel-heading">
 				<span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> To Do List
 			</div>
 
 			<div class="panel-body">
-				<span>Filter tasks </span><input type="text" ng-model="$todoCtrl.filterText">
-
             	<todo-list></todo-list>
-                <label>
-                    <input type="checkbox" ng-model="$todoCtrl.showCompleted">Show Completed</input>
-                </label>
-				<button class="btn btn-default btn-sm"
-						ng-show="$todoCtrl.isCompletedItemPresent($todoCtrl.todo.items)"
-						ng-click="$todoCtrl.removeCompletedItems()">Remove completed
-				</button>
-
-				<div class="pull-right">
-					<span>Page size </span>
-					<select name="pageSize" ng-model="$todoCtrl.pageSize" ng-options="item.count as item.name for item in $todoCtrl.pageSizes">
-					</select>
-					<button class="btn btn-default btn-sm" ng-click="$todoCtrl.prevPage()">Prev page</button>
-					<ul class="list-inline paging" paging collection="$todoCtrl.todo.items" size="{{ $todoCtrl.pageSize }}">
-					</ul>
-					<button class="btn btn-default btn-sm" ng-click="$todoCtrl.nextPage()">Next page</button>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -58,18 +44,25 @@
 
 	<script src="common/common.module.js"></script>
 	<script src="common/services/user.service.js"></script>
-	<script src="common/directives/page-header.directive.js"></script>
-	<script src="common/page-header.controller.js"></script>
+	<script src="common/directives/pageHeader/pageHeader.directive.js"></script>
+	<script src="common/directives/pageHeader/pageHeader.controller.js"></script>
+	<script src="common/directives/menu/menu.directive.js"></script>
+	<script src="common/directives/menu/menuItem.directive.js"></script>
+	<script src="common/directives/menu/menuGroup.directive.js"></script>
+
 
 	<script src="feature/feature.module.js"></script>
-	<script src="feature/todo.service.js"></script>
-	<script src="feature/todo.controller.js"></script>
-	<script src="feature/item-form.controller.js"></script>
-	<script src="feature/directives/todo-list.directive.js"></script>
+	<script src="feature/services/todo.service.js"></script>
 	<script src="feature/checked-items.filter.js"></script>
 	<script src="feature/directives/highlight-missed.directive.js"></script>
-	<script src="feature/directives/item-modal.directive.js"></script>
-	<script src="feature/directives/paging.directive.js"></script>
+	<script src="feature/components/todoList/todoList.component.js"></script>
+	<script src="feature/components/todoList/todoList.controller.js"></script>
+	<script src="feature/components/todoFilter/todoFilter.component.js"></script>
+	<script src="feature/components/paging/paging.component.js"></script>
+	<script src="feature/components/paging/paging.controller.js"></script>
+	<script src="feature/components/taskForm/taskForm.component.js"></script>
+	<script src="feature/components/taskForm/taskForm.controller.js"></script>
+	<script src="feature/services/todoList.service.js"></script>
 
 	<script src="app.js"></script>
 </body>
